sanger/sites/melanoma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: melanoma
  labels:
    app: melanoma
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5005
  selector:
    app: melanoma
